Add dataset and github page

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ div.tooltip {
          To observe the raw data behind a particular comnparison, click on the corresponding square in the matrix, and the raw data will be displayed under <i>Raw data vizualisation for a given comparison.</i>.
       </p>
       <p>
-        The raw data can be downloaded here: <a href="./rawdata.tsv">Dataset</a>. It is formated as a TSV.
+        The raw data can be downloaded here: <a href="./dataset/dataset.zip">Dataset</a>. The documentation is in the <a href="https://github.com/extavourlab/TransgenerationalEffectOfNutrition/tree/master/dataset">README.md</a> file. The source code for this dataviz is Open-Sourced under the MIT licence, and can be found here: <a href="https://github.com/extavourlab/TransgenerationalEffectOfNutrition">Github Repository</a>.
       </p>
       <H3>Legend</H3>
       <p>
