--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ div.tooltip {
         <h1>The transgenerational effect of nutrition on flies.</h1>
       <p>
         Research design and data collection by <label>Joe Deas</label><sup>1</sup>;
-        Data-vizualization by <label>Leo Blondel</label><sup>1</sup>;
+        Data-visualization by <label>Leo Blondel</label><sup>1</sup>;
         Principal Investigator <label>Cassandra G Extavour</label><sup>1</sup>
       </p>
       <p>
@@ -175,11 +175,11 @@ div.tooltip {
         <i>Abstract of the paper goes here.</i>
       </p>
       <p>
-         This is an interactive datavizualisation that allows the user to explore interactively the dataset published in the paper <bold>ADD REF TO PAPER ONCE PUBLISHED</bold>.
+         This is an interactive data-visualization that allows the user to explore interactively the dataset published in the paper <bold>ADD REF TO PAPER ONCE PUBLISHED</bold>.
          Represented on the left matrix are the results of corrected pairwise statistical comparisons between two sets of generations, each having been subjected to a different diet.
          To explore this dataset, you can observe on the matrix the significance of a change of diet in a given phenotype. On the right size, you will find different filters and selectors change the phenotype, or ask particular hypothesis.
          For example, you can choose to observe the difference for a Rich F0 diet, followed by a Poor F1 diet, by selecting <bold>Generation Selector: F0 Rich F1 Poor F2 Any</bold>.
-         To observe the raw data behind a particular comnparison, click on the corresponding square in the matrix, and the raw data will be displayed under <i>Raw data vizualisation for a given comparison.</i>.
+         To observe the raw data behind a particular comnparison, click on the corresponding square in the matrix, and the raw data will be displayed under <i>Raw data visualization for a given comparison.</i>.
       </p>
       <p>
         The raw data can be downloaded here: <a href="./dataset/dataset.zip">Dataset</a>. The documentation is in the <a href="https://github.com/extavourlab/TransgenerationalEffectOfNutrition/tree/master/dataset">README.md</a> file. The source code for this dataviz is Open-Sourced under the MIT licence, and can be found here: <a href="https://github.com/extavourlab/TransgenerationalEffectOfNutrition">Github Repository</a>.
@@ -354,7 +354,7 @@ div.tooltip {
       <hr />
         <div class="row">
           <div class="col-md-12 col-xs-12">
-            <h3>Raw data vizualisation for a given comparison.</h3>
+            <h3>Raw data visualization for a given comparison.</h3>
             <div class="chart-wrapper" id="chart-distro1"></div>
             <label id="plotType" value='violin'>Chart Type: </label>
             <button id="violinbutton" class="btn btn-default active" type="button" onclick="ChangePlotType('violin')">ViolinPlot</button>
