--- a/index.html
+++ b/index.html
@@ -191,13 +191,19 @@ div.tooltip {
         <bold>XYZ</bold>: F0 was subjected to diet X, F1 diet Y and F2 diet Z (example: SRP: F0 standard, F1 rich and F2 poor)
       </p>
       <p>
+        <div class="row">
+
             <img src="./images/egg.svg" width='70px' title="Egg Size"/> Egg Size
             <img src="./images/mass.svg" width='70px' title="Fly mass"/> Fly mass
             <img src="./images/wing.svg" width='70px' title="Wing Length"/> Wing Length
             <img src="./images/ovarno.svg" width='70px' title="Number of Ovariole"/> Number of Ovariole
+        </div>
+        <div class="row">
+
             <img src="./images/L1A.svg" width='70px' title="Larvae to Adult development time"/> Larvae to Adult development time
             <img src="./images/LPA.svg" width='70px' title="Pupae to Adult development time"/> Pupae to Adult development time
             <img src="./images/L1LP.svg" width='70px' title="Larvae to Pupae development time"/> Larvae to Pupae development time
+        </div>
       </p>
       <p>
         <div class="row">
@@ -206,7 +212,7 @@ div.tooltip {
           <div id="legendBlock" class="legblock3 col-sm-1"></div>
           <div id="legendBlock" class="legblock4 col-sm-1"></div>
           <div id="legendBlock" class="legblock5 col-sm-1"></div>
-          <div class="col-sm-7">
+          <div>
             Each square is colored by the p-value of the statistical test performed between the corresponding column and row group. The p-value is displayed by hovering over the square. The darker the blue, the more significant the difference is.
           </div>
         </div>
