--- a/index.html
+++ b/index.html
@@ -187,12 +187,11 @@ div.tooltip {
         <i>Abstract of the paper goes here.</i>
       </p>
       <p>
-         This is an interactive data-visualization that allows the user to explore interactively the dataset published in the paper <bold>ADD REF TO PAPER ONCE PUBLISHED</bold>.
-         Represented on the left matrix are the results of corrected pairwise statistical comparisons (Dunn’s test) between two sets of generations, each having been subjected to a different diet.
-         To explore this dataset, you can observe on the matrix the significance of a change of diet in a given phenotype. On the right size, you will find different filters and selectors change the phenotype, or ask particular hypothesis.
-         For example, you can choose to observe the difference for a Rich F0 diet, followed by a Poor F1 diet, by selecting <bold>Generation Selector: F0 Rich F1 Poor F2 Any</bold>.
-         To observe the raw data behind a particular comnparison, click on the corresponding square in the matrix, and the raw data will be displayed under <i>Raw data visualization for a given comparison.</i>.
-      </p>
+        This is an interactive data-visualization that allows the user to explore interactively the dataset published in the paper <bold>ADD REF TO PAPER ONCE PUBLISHED</bold>. Represented on the left matrix are the results of corrected pairwise statistical comparisons (Dunn’s test) between two sets of generations, each having been subjected to a different diet.
+        To explore this dataset, you can observe on the matrix the significance of a change of diet in a given phenotype. On the right size, you will find different filters and selectors to change the phenotype, or ask particular hypothesis.
+        For example, you can choose to observe the difference for a Rich F0 diet, followed by a Poor F1 diet, by selecting <bold>Generation Selector: F0 Rich F1 Poor F2 Any</bold>.
+        To observe the raw data behind a particular comparison, click on the corresponding square in the matrix, and the raw data will be displayed under <i>Raw data visualization for a given comparison.</i>.
+    </p>
       <p>
         The raw data can be downloaded here: <a href="./dataset/dataset.zip">Dataset</a>. The documentation is in the <a href="https://github.com/extavourlab/TransgenerationalEffectOfNutrition/tree/master/dataset">README.md</a> file. The source code for this dataviz is Open-Sourced under the MIT licence, and can be found here: <a href="https://github.com/extavourlab/TransgenerationalEffectOfNutrition">Github Repository</a>.
       </p>
