--- a/index.html
+++ b/index.html
@@ -389,6 +389,8 @@ div.tooltip {
   <footer>
     Thanks to the D3 Reusable charts project by Andrew Sielen (MIT licenced) for the swarm plots. <a href="http://bl.ocks.org/asielen/92929960988a8935d907e39e60ea8417">Source code</a> <br />
     Heatmap adapted from Tom May Day/Hours heatmap (MIT licence). <a href="http://bl.ocks.org/tjdecke/5558084">Source code</a>
+    <h4>Funding</h4>
+    Funding for this research project was provided by ADD FUNDING SOURCES HERE. 
   </footer>
 
 
