--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@ div.tooltip {
         <i>Abstract of the paper goes here.</i>
       </p>
       <p>
-        This is an interactive data-visualization that allows the user to explore interactively the dataset published in the paper <bold>ADD REF TO PAPER ONCE PUBLISHED</bold>. Represented on the left matrix are the results of corrected pairwise statistical comparisons (Dunn’s test) between two sets of generations, each having been subjected to a different diet.
+        This is an interactive data-visualization that allows the user to explore interactively the dataset published in the paper <label>ADD REF TO PAPER ONCE PUBLISHED</label>. Represented on the left matrix are the results of corrected pairwise statistical comparisons (Dunn’s test) between two sets of generations, each having been subjected to a different diet.
         To explore this dataset, you can observe on the matrix the significance of a change of diet in a given phenotype. On the right size, you will find different filters and selectors to change the phenotype, or ask particular hypothesis.
-        For example, you can choose to observe the difference for a Rich F0 diet, followed by a Poor F1 diet, by selecting <bold>Generation Selector: F0 Rich F1 Poor F2 Any</bold>.
+        For example, you can choose to observe the difference for a Rich F0 diet, followed by a Poor F1 diet, by selecting <label>Generation Selector: F0 Rich F1 Poor F2 Any</label>.
         To observe the raw data behind a particular comparison, click on the corresponding square in the matrix, and the raw data will be displayed under <i>Raw data visualization for a given comparison.</i>.
     </p>
       <p>
@@ -197,9 +197,9 @@ div.tooltip {
       </p>
       <H3>Legend</H3>
       <p>
-        <bold>P</bold>: Poor; <bold>R</bold>: Rich; <bold>S</bold>: Standard<br />
-        <bold>XY</bold>: F0 was subjected to diet X and F1 diet Y (example: PR: F0 poor and F1 rich)<br />
-        <bold>XYZ</bold>: F0 was subjected to diet X, F1 diet Y and F2 diet Z (example: SRP: F0 standard, F1 rich and F2 poor)
+        <label>P</label>: Poor; <label>R</label>: Rich; <label>S</label>: Standard<br />
+        <label>XY</label>: F0 was subjected to diet X and F1 diet Y (example: PR: F0 poor and F1 rich)<br />
+        <label>XYZ</label>: F0 was subjected to diet X, F1 diet Y and F2 diet Z (example: SRP: F0 standard, F1 rich and F2 poor)
       </p>
       <p>
         <div class="row">
