--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html>
   <head>
-    <title>Joe Dataviz</title>
+    <title>Ancestral and offspring nutrition interact to affect life history traits in Drosophila melanogaster</title>
     <style>
       rect.bordered {
         stroke: #E6E6E6;
@@ -173,7 +173,7 @@ div.tooltip {
     <div class='row'>
       <div class='col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1'>
       <center>
-        <h1>The transgenerational effect of nutrition on flies.</h1>
+        <h1>Ancestral and offspring nutrition interact to affect life history traits in <i>Drosophila melanogaster</i></h1>
       <p>
         Research design and data collection by <label>Joe Deas</label><sup>1</sup>;
         Data-visualization by <label>Leo Blondel</label><sup>2</sup>;
@@ -184,7 +184,7 @@ div.tooltip {
         2: Department of Molecular and Cellular Biology, Harvard University.
       </p>
       <p>
-        <i>Abstract of the paper goes here.</i>
+        <i>Ancestral environmental conditions can impact descendant phenotypes through a variety of epigenetic mechanisms. Previous studies on transgenerational effects in Drosophila melanogaster suggest that parental nutrition may affect the body size, development time, and eggsize of the next generation. However, it is unknown whether these effects on phenotype remain stable across generations, or if specific generations have general responses to ancestral diet. In the current study, we examine the effect on multiple life history phenotypes of changing diet treatments across three generations. All phenotypes were strongly affected by poor diet, but only certain phenotypes showed patterns of transgenerational effects. Our analysis revealed unforeseen patterns in how phenotypes respond to dietary restriction. Multiple forms of linear regression modeling show that when considering only two generations, offspring phenotypes are primarily affected by the diet they eat, and to a lesser extent, the diet of their parents, and interactions between the two diets. Surprisingly, however, when considering three generations, offspring phenotypes are predominantly impacted by the diet of their grandparents and parents, and to a lesser extent, their own diet or interactions among the ancestral and descendant diets. To improve investigations into the mechanisms and consequences of transgenerational, epigenetic inheritance, future phenotype assays need to closely examine how phenotypes change across a higher number of generations, and should also consider responses to broader variability in diet treatments.</i>
       </p>
       <p>
         This is an interactive data-visualization that allows the user to explore interactively the dataset published in the paper <label>ADD REF TO PAPER ONCE PUBLISHED</label>. Represented on the left matrix are the results of corrected pairwise statistical comparisons (Dunn’s test) between two sets of generations, each having been subjected to a different diet.
