--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ div.tooltip {
     Thanks to the D3 Reusable charts project by Andrew Sielen (MIT licenced) for the swarm plots. <a href="http://bl.ocks.org/asielen/92929960988a8935d907e39e60ea8417">Source code</a> <br />
     Heatmap adapted from Tom May Day/Hours heatmap (MIT licence). <a href="http://bl.ocks.org/tjdecke/5558084">Source code</a>
     <h4>Funding</h4>
-    This work was funded and supported by the National Institute of Health (NIH).
+    This work was supported by NIH grant  R01HD073499 to CGE. JD was partially supported by NIH Supplement 3R01HD073499-03S1.
   </footer>
 
 
