--- a/index.html
+++ b/index.html
@@ -180,20 +180,30 @@ div.tooltip {
         Principal Investigator <label>Cassandra G Extavour</label><sup>1,2</sup>
       </p>
       <p>
-        1: Department of Organism and Evolution, Harvard University. <br />
+        1: Department of Organismic and Evolutionary Biology, Harvard University. <br />
         2: Department of Molecular and Cellular Biology, Harvard University.
       </p>
       <p>
         <i>Ancestral environmental conditions can impact descendant phenotypes through a variety of epigenetic mechanisms. Previous studies on transgenerational effects in Drosophila melanogaster suggest that parental nutrition may affect the body size, development time, and eggsize of the next generation. However, it is unknown whether these effects on phenotype remain stable across generations, or if specific generations have general responses to ancestral diet. In the current study, we examine the effect on multiple life history phenotypes of changing diet treatments across three generations. All phenotypes were strongly affected by poor diet, but only certain phenotypes showed patterns of transgenerational effects. Our analysis revealed unforeseen patterns in how phenotypes respond to dietary restriction. Multiple forms of linear regression modeling show that when considering only two generations, offspring phenotypes are primarily affected by the diet they eat, and to a lesser extent, the diet of their parents, and interactions between the two diets. Surprisingly, however, when considering three generations, offspring phenotypes are predominantly impacted by the diet of their grandparents and parents, and to a lesser extent, their own diet or interactions among the ancestral and descendant diets. To improve investigations into the mechanisms and consequences of transgenerational, epigenetic inheritance, future phenotype assays need to closely examine how phenotypes change across a higher number of generations, and should also consider responses to broader variability in diet treatments.</i>
       </p>
       <p>
-        This is an interactive data-visualization that allows the user to explore interactively the dataset published in the paper <label>ADD REF TO PAPER ONCE PUBLISHED</label>. Represented on the left matrix are the results of corrected pairwise statistical comparisons (Dunn’s test) between two sets of generations, each having been subjected to a different diet.
-        To explore this dataset, you can observe on the matrix the significance of a change of diet in a given phenotype. On the right size, you will find different filters and selectors to change the phenotype, or ask particular hypothesis.
-        For example, you can choose to observe the difference for a Rich F0 diet, followed by a Poor F1 diet, by selecting <label>Generation Selector: F0 Rich F1 Poor F2 Any</label>.
-        To observe the raw data behind a particular comparison, click on the corresponding square in the matrix, and the raw data will be displayed under <i>Raw data visualization for a given comparison.</i>.
-    </p>
+        This site provides an interactive data visualization that allows the user to explore the dataset described in (Deas et al. 2018).
+	The left matrix displays the results of corrected pairwise statistical comparisons (Dunn’s test) between the phenotypes of two sets
+        of generations of Drosophila melanogaster, each generation having been subjected to a different diet (standard (S), 
+	rich (R) or poor (P)). To explore this dataset, you can observe on the matrix the impact of a change of diet on a given phenotype.
+        To the right of the matrix, you can use different filters and selectors to view different phenotypes, or ask particular 
+      questions about the effects of different dietary combinations on phenotypes of interest. For example, you can 
+      choose to observe the impact of a rich F0 diet, followed by a poor F1 diet, by selecting “Generation Selector: 
+      F0 Rich F1 Poor F2 Any”. To obtain the raw data for a particular comparison, click on the corresponding square 
+      in the matrix, and the raw data will be displayed in a plot at the bottom right under Raw data visualization 
+      for a given comparison..
+
+        Each square in the matrix on the left is colored according to the p-value returned by the statistical test performed 
+      between the corresponding column and row dietary combinations. The p-value is displayed by hovering over the square. 
+      The darker the blue color, the more significant the difference is.
+	    </p>
       <p>
-        The raw data can be downloaded here: <a href="./dataset/dataset.zip">Dataset</a>. The documentation is in the <a href="https://github.com/extavourlab/TransgenerationalEffectOfNutrition/tree/master/dataset">README.md</a> file. The source code for this dataviz is Open-Sourced under the MIT licence, and can be found here: <a href="https://github.com/extavourlab/TransgenerationalEffectOfNutrition">Github Repository</a>.
+        The raw data can be downloaded here: <a href="./dataset/dataset.zip">Dataset</a>. The documentation is in the <a href="https://github.com/extavourlab/TransgenerationalEffectOfNutrition/blob/master/dataset/README.md">README.md</a> file. The source code for this dataviz is Open-Sourced under the MIT licence, and can be found here: <a href="https://github.com/extavourlab/TransgenerationalEffectOfNutrition">Github Repository</a>.
       </p>
       <H3>Legend</H3>
       <p>
