--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ div.tooltip {
 
     <div class="row vdivide">
       <div class="col-md-6 col-xs-12">
-        <h3>Significance of diet on a particular phenotype.</h3>
+        <h3>Impact of diet on a particular phenotype.</h3>
         <div id="chart"></div>
       </div>
       <div class="col-md-6 col-xs-12">
@@ -295,7 +295,7 @@ div.tooltip {
                     <select id="hypo" name="hypo" class="form-control">
                       <option value="f0eqf2">Effect of changing the diet of the parents</option>
                       <option value="f1eqf2">Effect of changing the diet of the grandparents</option>
-                      <option value="2same">Effect of 2 generation of the same diet</option>
+                      <option value="2same">Effect of two generations of the same diet</option>
                     </select>
                   </div>
                 </div>
@@ -397,11 +397,13 @@ div.tooltip {
   <br />
   <hr />
   <footer>
+    <h4>Acknowledgements</h4>
+    We thank the Extavour Lab members for their creative and effective suggestions on experimental design and data analysis. 
     <h4>Credits</h4>
-    Thanks to the D3 Reusable charts project by Andrew Sielen (MIT licenced) for the swarm plots. <a href="http://bl.ocks.org/asielen/92929960988a8935d907e39e60ea8417">Source code</a> <br />
-    Heatmap adapted from Tom May Day/Hours heatmap (MIT licence). <a href="http://bl.ocks.org/tjdecke/5558084">Source code</a>
+    Thanks to the D3 Reusable charts project by Andrew Sielen (MIT licensed) for the swarm plots. <a href="http://bl.ocks.org/asielen/92929960988a8935d907e39e60ea8417">Source code</a> <br />
+    Heatmap adapted from Tom May Day/Hours heatmap (MIT license). <a href="http://bl.ocks.org/tjdecke/5558084">Source code</a>
     <h4>Funding</h4>
-    This work was supported by NIH grant  R01HD073499 to CGE. JD was partially supported by NIH Supplement 3R01HD073499-03S1.
+    This work was supported by NIH grant R01HD073499 to CGE and funds from Harvard University. JD was partially supported by NIH Supplement 3R01HD073499-03S1.
   </footer>
 
 
