--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@ div.tooltip {
 	rich (R) or poor (P)). To explore this dataset, you can observe on the matrix the impact of a change of diet on a given phenotype.
         To the right of the matrix, you can use different filters and selectors to view different phenotypes, or ask particular 
       questions about the effects of different dietary combinations on phenotypes of interest. For example, you can 
-      choose to observe the impact of a rich F0 diet, followed by a poor F1 diet, by selecting “Generation Selector: 
-      F0 Rich F1 Poor F2 Any”. To obtain the raw data for a particular comparison, click on the corresponding square 
-      in the matrix, and the raw data will be displayed in a plot at the bottom right under Raw data visualization 
-      for a given comparison..
+      choose to observe the impact of a rich F0 diet, followed by a poor F1 diet, by selecting <label>"Generation Selector: 
+	      F0 Rich F1 Poor F2 Any"</label>. To obtain the raw data for a particular comparison, click on the corresponding square 
+      in the matrix, and the raw data will be displayed in a plot at the bottom right under <i>Raw data visualization 
+	      for a given comparison.</i>
 
         Each square in the matrix on the left is colored according to the p-value returned by the statistical test performed 
       between the corresponding column and row dietary combinations. The p-value is displayed by hovering over the square. 
