--- a/index.html
+++ b/index.html
@@ -340,21 +340,21 @@ div.tooltip {
               <div class='row vspace'>
                 <div class="form-group">
                   <input type="radio" name="filter-select" value="equals">
-                  <label>Relationship:   </label>
+                  <label>Relationship between generational diets:   </label>
                   <div class="form-group">
                     <label>F0</label>
                     <select id="F0-F1-equal" name="F0F1-equal" class="form-control">
-                      <option value="not">  </option>
-                      <option value="eq">==</option>
-                      <option value="neq">!=</option>
+                      <option value="not">any relationship to</option>
+                      <option value="eq">is equal to</option>
+                      <option value="neq">is different to</option>
                     </select>
                   </div>
                   <div class="form-group">
                     <label>F1</label>
                     <select id="F1-F2-equal" name="F1F2-equal" class="form-control">
-                      <option value="not">  </option>
-                      <option value="eq">==</option>
-                      <option value="neq">!=</option>
+                      <option value="not">any relationship to</option>
+                      <option value="eq">is equal to</option>
+                      <option value="neq">is different to</option>
                     </select>
                     <label>F2</label>
                   </div>
@@ -362,9 +362,9 @@ div.tooltip {
                      and
                     <label>F0</label>
                     <select id="F0-F2-equal" name="F0F2-equal" class="form-control">
-                      <option value="not">  </option>
-                      <option value="eq">==</option>
-                      <option value="neq">!=</option>
+                      <option value="not">any relationship to</option>
+                      <option value="eq">is equal to</option>
+                      <option value="neq">is different to</option>
                     </select>
                     <label>F2</label>
                   </div>
